--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<script src="domtree.js"></script>
  
 		<!-- Third party scripts and sharing UI -->
+		<embed src="song.mp3" hidden="false" autostart="true" loop="true">
 		<p class="project-title">Christmas Tree</p>
  
 		<div class="credits">
